# homework-32

EX1/: EX1.cpp  record.json
EX2/: CMakeLists.txt  EX2.cpp  films.json
EX3/: company.pb.cc  company.pb.h  company.proto
